test/fail/generated/test_softmax_spatial_special/model.pb
pytorch0.3:¸
ç
01"Softmax*
axis 2È/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/functional.py(818): softmax
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/test/test_nn.py(3822): forward
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/module.py(325): __call__
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/jit/__init__.py(245): forward
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/module.py(325): __call__
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/jit/__init__.py(227): trace
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/onnx/__init__.py(120): _export
convert_pytorch_test.py(69): convert_tests
convert_pytorch_test.py(102): <module>
torch-jit-exportZ
0


€

b
1


€

B